HelloUltraviolet/Fixtures/RejectedSource/FFI/RawExportNonPublic/Source/Main.uv
//! Rejected FFI specimen for non-public raw exports.

#export("C")
procedure rawExportNonPublicReference() -> i32 {
    return 0
}

